--- a/src/components/AboutUs/aboutUs.css
+++ b/src/components/AboutUs/aboutUs.css
@@ -1,8 +1,13 @@
 .aboutus-container{
-    background-color: #fff;
-    height: 100vh;
-    top: 70px;
+    background-color: white;
     width: 100%;
-    position: relative;
-    font-size: 35px;
+
+    height: 100vh ;
+    top: 80px;
+}
+
+.heading {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
