--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,6 +1,6 @@
 .main-profile-container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 150px );
   display: flex;
   flex-direction: column;
   justify-content: space-around;
