--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,27 +1,77 @@
 .main-profile-container {
   width: 100%;
-  height: calc(100vh - 150px );
+  height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-image: radial-gradient(
-      circle at center center,
-      transparent 0%,
-      rgb(33, 33, 33) 99%
+  background-image: linear-gradient(
+      67.5deg,
+      rgb(6, 6, 6) 0%,
+      rgb(6, 6, 6) 6%,
+      rgb(29, 29, 29) 6%,
+      rgb(29, 29, 29) 57%,
+      rgb(52, 52, 52) 57%,
+      rgb(52, 52, 52) 58%,
+      rgb(75, 75, 75) 58%,
+      rgb(75, 75, 75) 79%,
+      rgb(97, 97, 97) 79%,
+      rgb(97, 97, 97) 93%,
+      rgb(120, 120, 120) 93%,
+      rgb(120, 120, 120) 95%,
+      rgb(143, 143, 143) 95%,
+      rgb(143, 143, 143) 100%
     ),
-    repeating-linear-gradient(
-      0deg,
-      rgba(163, 163, 163, 0.2) 0px,
-      rgba(163, 163, 163, 0.2) 1px,
-      transparent 1px,
-      transparent 6px
-    ),
-    repeating-linear-gradient(
+    linear-gradient(
       90deg,
-      rgba(163, 163, 163, 0.2) 0px,
-      rgba(163, 163, 163, 0.2) 1px,
-      transparent 1px,
-      transparent 6px
+      rgb(6, 6, 6) 0%,
+      rgb(6, 6, 6) 6%,
+      rgb(29, 29, 29) 6%,
+      rgb(29, 29, 29) 57%,
+      rgb(52, 52, 52) 57%,
+      rgb(52, 52, 52) 58%,
+      rgb(75, 75, 75) 58%,
+      rgb(75, 75, 75) 79%,
+      rgb(97, 97, 97) 79%,
+      rgb(97, 97, 97) 93%,
+      rgb(120, 120, 120) 93%,
+      rgb(120, 120, 120) 95%,
+      rgb(143, 143, 143) 95%,
+      rgb(143, 143, 143) 100%
     ),
-    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
+    linear-gradient(
+      135deg,
+      rgb(6, 6, 6) 0%,
+      rgb(6, 6, 6) 6%,
+      rgb(29, 29, 29) 6%,
+      rgb(29, 29, 29) 57%,
+      rgb(52, 52, 52) 57%,
+      rgb(52, 52, 52) 58%,
+      rgb(75, 75, 75) 58%,
+      rgb(75, 75, 75) 79%,
+      rgb(97, 97, 97) 79%,
+      rgb(97, 97, 97) 93%,
+      rgb(120, 120, 120) 93%,
+      rgb(120, 120, 120) 95%,
+      rgb(143, 143, 143) 95%,
+      rgb(143, 143, 143) 100%
+    ),
+    linear-gradient(
+      0deg,
+      rgb(6, 6, 6) 0%,
+      rgb(6, 6, 6) 6%,
+      rgb(29, 29, 29) 6%,
+      rgb(29, 29, 29) 57%,
+      rgb(52, 52, 52) 57%,
+      rgb(52, 52, 52) 58%,
+      rgb(75, 75, 75) 58%,
+      rgb(75, 75, 75) 79%,
+      rgb(97, 97, 97) 79%,
+      rgb(97, 97, 97) 93%,
+      rgb(120, 120, 120) 93%,
+      rgb(120, 120, 120) 95%,
+      rgb(143, 143, 143) 95%,
+      rgb(143, 143, 143) 100%
+    ),
+    linear-gradient(90deg, rgb(8, 8, 8), rgb(221, 221, 221));
+  background-blend-mode: overlay, overlay, overlay, overlay, normal;
 }
