--- a/src/components/AboutUs/aboutUs.css
+++ b/src/components/AboutUs/aboutUs.css
@@ -1,13 +1,15 @@
-.aboutus-container{
-    background-color: white;
-    width: 100%;
-
-    height: 100vh ;
-    top: 80px;
+.aboutus-container {
+  background-color: white;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.heading {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+.aboutus-container .heading {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: black;
 }
