--- a/src/components/Home/Footer/footer.css
+++ b/src/components/Home/Footer/footer.css
@@ -1,12 +1,7 @@
-.spacer {
-    aspect-ratio: 1900/70;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    
-  }
-  .layer1 img{
+.layer1 img{
         max-width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-size: cover;    
     }
   
