--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,9 +1,10 @@
 .main-profile-container {
   width: 100%;
-  height: calc(100vh - 150px);
+  height: 550px;
+  overflow : hidden;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   background-image: linear-gradient(
       67.5deg,
       rgb(6, 6, 6) 0%,
