--- a/src/components/AboutUs/aboutUs.css
+++ b/src/components/AboutUs/aboutUs.css
@@ -1,6 +1,7 @@
 .aboutus-container {
   background-color: white;
   width: 100%;
+  height: -100px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
