--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,6 +1,7 @@
 .main-profile-container {
   width: 100%;
   height: 550px;
+  height: 100%;
   overflow : hidden;
   display: flex;
   flex-direction: column;
