--- a/src/components/Home/Home/home.css
+++ b/src/components/Home/Home/home.css
@@ -1,4 +1,5 @@
-.profile-container {display: flex;
+.profile-container {
+  display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
