--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,78 +1,32 @@
 .main-profile-container {
   width: 100%;
   height: 100%;
-  overflow : hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: linear-gradient(
-      67.5deg,
-      rgb(6, 6, 6) 0%,
-      rgb(6, 6, 6) 6%,
-      rgb(29, 29, 29) 6%,
-      rgb(29, 29, 29) 57%,
-      rgb(52, 52, 52) 57%,
-      rgb(52, 52, 52) 58%,
-      rgb(75, 75, 75) 58%,
-      rgb(75, 75, 75) 79%,
-      rgb(97, 97, 97) 79%,
-      rgb(97, 97, 97) 93%,
-      rgb(120, 120, 120) 93%,
-      rgb(120, 120, 120) 95%,
-      rgb(143, 143, 143) 95%,
-      rgb(143, 143, 143) 100%
+  background-image: radial-gradient(
+      circle at center center,
+      transparent,
+      rgb(33, 33, 33)
     ),
-    linear-gradient(
-      90deg,
-      rgb(6, 6, 6) 0%,
-      rgb(6, 6, 6) 6%,
-      rgb(29, 29, 29) 6%,
-      rgb(29, 29, 29) 57%,
-      rgb(52, 52, 52) 57%,
-      rgb(52, 52, 52) 58%,
-      rgb(75, 75, 75) 58%,
-      rgb(75, 75, 75) 79%,
-      rgb(97, 97, 97) 79%,
-      rgb(97, 97, 97) 93%,
-      rgb(120, 120, 120) 93%,
-      rgb(120, 120, 120) 95%,
-      rgb(143, 143, 143) 95%,
-      rgb(143, 143, 143) 100%
-    ),
-    linear-gradient(
+    repeating-linear-gradient(
       135deg,
-      rgb(6, 6, 6) 0%,
-      rgb(6, 6, 6) 6%,
-      rgb(29, 29, 29) 6%,
-      rgb(29, 29, 29) 57%,
-      rgb(52, 52, 52) 57%,
-      rgb(52, 52, 52) 58%,
-      rgb(75, 75, 75) 58%,
-      rgb(75, 75, 75) 79%,
-      rgb(97, 97, 97) 79%,
-      rgb(97, 97, 97) 93%,
-      rgb(120, 120, 120) 93%,
-      rgb(120, 120, 120) 95%,
-      rgb(143, 143, 143) 95%,
-      rgb(143, 143, 143) 100%
+      rgb(33, 33, 33) 0px,
+      rgb(33, 33, 33) 2px,
+      transparent 2px,
+      transparent 10px,
+      rgb(33, 33, 33) 10px,
+      rgb(33, 33, 33) 11px,
+      transparent 11px,
+      transparent 21px
     ),
-    linear-gradient(
-      0deg,
-      rgb(6, 6, 6) 0%,
-      rgb(6, 6, 6) 6%,
-      rgb(29, 29, 29) 6%,
-      rgb(29, 29, 29) 57%,
-      rgb(52, 52, 52) 57%,
-      rgb(52, 52, 52) 58%,
-      rgb(75, 75, 75) 58%,
-      rgb(75, 75, 75) 79%,
-      rgb(97, 97, 97) 79%,
-      rgb(97, 97, 97) 93%,
-      rgb(120, 120, 120) 93%,
-      rgb(120, 120, 120) 95%,
-      rgb(143, 143, 143) 95%,
-      rgb(143, 143, 143) 100%
+    repeating-linear-gradient(
+      45deg,
+      rgb(47, 47, 47) 0px,
+      rgb(47, 47, 47) 4px,
+      transparent 4px,
+      transparent 8px
     ),
-    linear-gradient(90deg, rgb(8, 8, 8), rgb(221, 221, 221));
-  background-blend-mode: overlay, overlay, overlay, overlay, normal;
+    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
 }
