--- a/src/components/AboutUs/aboutUs.css
+++ b/src/components/AboutUs/aboutUs.css
@@ -1,11 +1,35 @@
 .aboutus-container {
-  background-color: white;
   width: 100%;
-  height: -100px;
-  overflow: hidden;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  color: white;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-image: radial-gradient(
+      circle at center center,
+      transparent,
+      rgb(33, 33, 33)
+    ),
+    repeating-linear-gradient(
+      135deg,
+      rgb(33, 33, 33) 0px,
+      rgb(33, 33, 33) 2px,
+      transparent 2px,
+      transparent 10px,
+      rgb(33, 33, 33) 10px,
+      rgb(33, 33, 33) 11px,
+      transparent 11px,
+      transparent 21px
+    ),
+    repeating-linear-gradient(
+      45deg,
+      rgb(0, 76, 104) 0px,
+      rgb(0, 76, 104) 4px,
+      transparent 4px,
+      transparent 8px
+    ),
+    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
 }
 
 .aboutus-container .heading {
@@ -13,4 +37,13 @@
   justify-content: center;
   text-align: center;
   background-color: black;
+}
+.person-cards-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
