--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,10 +1,15 @@
 .services-container {
   width: 100%;
   height: 100%;
+  margin-bottom: 40px;
 }
 .cards-container{
   display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
+
