--- a/src/components/AboutUs/aboutUs.css
+++ b/src/components/AboutUs/aboutUs.css
@@ -36,8 +36,10 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  color: white;
   background-color: black;
 }
+
 .person-cards-container {
   display: flex;
   justify-content: center;
@@ -46,4 +48,11 @@
   margin-top: 40px;
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.aboutus-header {
+  font-size: 18px;
+  margin-top: 20px;
+  margin-left:  80px;
+  margin-right: 80px;
 }
