--- a/src/components/AboutUs/person/person.css
+++ b/src/components/AboutUs/person/person.css
@@ -1,25 +1,34 @@
 .person-cards {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
+
+}
+.header-info {
+  display: flex;
+  justify-content: center;
+
 }
 
 .person-icon {
-  /* background-image: url(../../services/home.jpg); */
+  background-image: url(../../services/images/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 10px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-radius: 50%;
+  /* border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px; */
+  height: 150px;
+  width: 150px;
+  margin-top: 10px;
 }
 
 .person-card-shape {
-  background-color: #171717;
   height: 350px;
   width: 300px;
-  box-shadow: 0 5px 25px rgba(1 1 1 / 23%);
+  /* box-shadow: 0 5px 25px rgba(255, 255, 255, 0.23); */
+  border: 2px ridge var(--light-blue) ;
   border-radius: 10px;
   padding: 0px;
   margin: 25px;
@@ -33,12 +42,12 @@
   transform: scale(1.1);
   transition: 0.7s ease;
 }
-.info {
+.person.info {
   padding: 10px;
 }
-.info h3 {
+.full-name{
   color: var(--light-blue);
 }
-.info p {
+.person.info p {
   color: white;
 }
