--- a/src/components/AboutUs/person/person.css
+++ b/src/components/AboutUs/person/person.css
@@ -41,6 +41,8 @@
   border-radius: 10px;
   padding: 0px;
   margin: 25px;
+  background: rgb(0,0,0);
+background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,60,131,1) 100%);
 }
 .person-card-shape .icon {
   height: 190px;
