--- a/src/components/ContactUs/contactUs.css
+++ b/src/components/ContactUs/contactUs.css
@@ -1,4 +1,97 @@
-.contactus-container{
-    width: 100%;
-    height: 100%;
+.contactus-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.contactus-body {
+  height: 480px;
+  width: 900px;
+  box-shadow: 0 5px 25px rgba(255, 255, 255, 0.08);
+  border: 2px ridge var(--light-blue);
+  border-radius: 12px;
+  display: flex;
+  flex-direction: row;
+  background-image: radial-gradient(
+      circle at center center,
+      transparent,
+      rgb(33, 33, 33)
+    ),
+    repeating-linear-gradient(
+      135deg,
+      rgb(33, 33, 33) 0px,
+      rgb(33, 33, 33) 2px,
+      transparent 2px,
+      transparent 10px,
+      rgb(33, 33, 33) 10px,
+      rgb(33, 33, 33) 11px,
+      transparent 11px,
+      transparent 21px
+    ),
+    repeating-linear-gradient(
+      45deg,
+      rgb(0, 76, 104) 0px,
+      rgb(0, 76, 104) 4px,
+      transparent 4px,
+      transparent 8px
+    ),
+    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
+}
+
+.contactus-left {
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+.contactus-left h2 {
+  margin-left: -200px;
+  margin-top: 4px;
+
+}
+
+.second-icons {
+    margin-left: -220px;
+}
+
+.second-icons i {
+  color: white;
+  padding: 8px;
+  padding-left: 0px;
+  margin-bottom: 60px;
+}
+
+.second-icons i:hover {
+  transform: scale(1.5);
+  transition: 0.3s ease-out;
+}
+
+.contactus-right {
+  border-radius: 12px;
+  margin-right: 20px;
+  margin-left: -100px;
+  margin-top: 80px;
+  height: 380px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  border: 2px ridge var(--light-blue);
+  background-color: white;
+}
+
+
+.send-message img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  width: 460px;
+  height: 280px;
+  float: left;
+  margin-left: 20px;
+}
+
+
