--- a/src/components/ContactUs/contactUs.css
+++ b/src/components/ContactUs/contactUs.css
@@ -80,6 +80,7 @@
   flex-direction: column;
   border: 2px ridge var(--light-blue);
   background-color: white;
+  text-align: left;
 }
 
 
@@ -92,6 +93,15 @@
   height: 280px;
   float: left;
   margin-left: 20px;
+}
+
+.contactus-right span{
+  margin-top: 5px;
+}
+
+
+.input-message{
+  height: 200px;
 }
 
 
